--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <style>
 .part:hover {
-    fill: #ccffcc;
+    fill: #7ba5ff;
+    stroke: #447fff;
     cursor: pointer;
 }
     </style>
