--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <style>
 .part:hover {
-    fill: #7ba5ff;
-    stroke: #447fff;
+    fill: #c9e2ff;
+    /* stroke: #adc7ff; */
     cursor: pointer;
 }
     </style>
