ready to add svg

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     </style>
     <body>
         <svg id="app" width="3840", height="1920">
+            <image x="10" y="20" width="200" height="200" xlink:href="sbol-icons/3-5-UTR.svg" />
         </svg>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="index.js"></script>
+        <!-- <svg width="3840", height="1920">
+            <path id="path10" inkscape:connector-curvature="0" sodipodi:nodetypes="ccccc" class="st1" d="M214.2,34.2L205,49.8h40l-8.8-15.6
+	C227.5,34.3,214.2,34.2,214.2,34.2z"/>
+        </svg> -->
     </body>
 </html>
